@@ -6,3 +6,5 @@
 - names.c: rewrite
 
 - spelling: buses x busses
+
+- update the web page
